@@ -6674,6 +6674,14 @@ sub random_nbit_prime {
   require Math::Prime::Util::RandomPrimes;
   return Math::Prime::Util::RandomPrimes::random_nbit_prime($bits);
 }
+sub random_safe_prime {
+  my($bits) = @_;
+  _validate_positive_integer($bits, 2);
+  return Math::Prime::Util::_reftyped($_[0], Math::Prime::Util::GMP::random_safe_prime($bits))
+    if $Math::Prime::Util::_GMPfunc{"random_safe_prime"};
+  require Math::Prime::Util::RandomPrimes;
+  return Math::Prime::Util::RandomPrimes::random_safe_prime($bits);
+}
 sub random_strong_prime {
   my($bits) = @_;
   _validate_positive_integer($bits, 128);
