@@ -846,6 +846,19 @@ sub _ST_Random_prime {  # From FIPS 186-4
   }
 }
 
+sub random_safe_prime {
+  my $b = int("$_[0]");
+  croak "random_safe_prime, bits must be >= 3" unless $b >= 3;
+
+  my($p,$q);
+  do {
+    $p = Math::Prime::Util::random_nbit_prime($b-1);
+    $q = Math::Prime::Util::mulint(2,$p) + 1;
+  } while ( ($p % 3) != 2 || ($p % 5) == 2 || ($q % 3) != 2 ||
+            !Math::Prime::Util::is_prob_prime($q) );
+  return $q;
+}
+
 
 # Gordon's algorithm for generating a strong prime.
 sub random_strong_prime {
